Comments and bugs fixed
